<resources>
    <string name="app_name">Wasd Replay by kirimatt</string>
    <string name="textViewDescription">Вставьте ссылку на реплей. Обязательное условие, что в ссылке должен присутствовать номер реплея. Например, https://wasd.tv/serega_pirat/videos?record=939531</string>
    <string name="urlEditText">URL</string>
    <string name="textViewUrl">Ссылка на реплей</string>
    <string name="buttonStartChat">Включить чат</string>
    <string name="buttonPause">Стоп</string>
    <string name="contentDescriptionSticker">Sticker</string>
    <string name="contentDescriptionAvatar">Avatar</string>
    <string name="contentDescriptionModerator">contentDescriptionModerator</string>
    <string name="imageButtonDesc">imageButtonDesc</string>
    <string name="savedHistory" />
    <string name="wasd_replay_by_kirimatt">Wasd Replay by kirimatt</string>
    <string name="search_edit_text">Введите каналы для поиска</string>
    <string name="delayHint">Введите задержку</string>
</resources>