<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PreviewActivity">


    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUrl"
        android:layout_centerHorizontal="true"
        android:text="@string/textViewDescription"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans"
        android:padding="15dp"/>


    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="789dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textViewUrl"
        android:autofillHints="Количество в валюте"
        android:ems="10"
        android:hint="@string/urlEditText"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:textColorHint="#00838F" />

    <Button
        android:id="@+id/buttonStartChat"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:maxLines="1"
        android:text="@string/buttonStartChat"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="5sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/textViewUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:text="@string/textViewUrl" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

</RelativeLayout>