<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/contentDescriptionAvatar" />


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/imageViewModerator"
        android:layout_marginStart="3dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageViewModerator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/imageViewAvatar"
        android:layout_marginStart="3dp"
        android:contentDescription="@string/contentDescriptionModerator" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageViewSticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewName"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/contentDescriptionSticker" />

</RelativeLayout>