<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp">

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_marginStart="6dp"
        android:text=""
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/textViewDate"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/contentDescriptionAvatar" />

    <ImageView
        android:id="@+id/imageViewModerator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/imageViewAvatar"
        android:layout_marginStart="3dp"
        android:contentDescription="@string/contentDescriptionModerator" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/imageViewModerator"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="6dp"
        android:text=""
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="sans" />


    <ImageView
        android:id="@+id/imageViewSticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textViewName"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/contentDescriptionSticker" />

</RelativeLayout>