<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#575454"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_gravity="start"
            android:id="@+id/textViewActivityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wasd_replay_by_kirimatt"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal"
            android:typeface="sans"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:background="#575454"
            android:layout_gravity="end"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp">

            <ImageButton
                android:id="@+id/imageButtonSettings"
                android:layout_width="wrap_content"
                android:background="#575454"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting_two_svg_repo_com"
                android:contentDescription="@string/imageButtonDesc" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/searchButton"
        android:autofillHints="Введите каналы для поиска"
        android:background="@color/white"
        android:hint="@string/search_edit_text"
        android:inputType="text"
        android:labelFor="@id/searchButton"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/imageButtonDesc"
        android:src="@drawable/ic_search_svg_repo_com"
        android:background="@color/black"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchEditText"
        android:layout_alignParentBottom="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>